--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <link rel="stylesheet" href="syle.css">
+        <title>Second uploded project</title>
     </head>
     <body>
-        
+        <h1>This is my second uploaded project on github</h1>
     </body>
 </html>
