--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>This is my second uploaded project on github</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum beatae voluptatibus dolorem, blanditiis quo exercitationem similique alias perferendis veniam est minima, necessitatibus, neque aliquam minus explicabo quae accusamus reprehenderit eaque.</p>
     </body>
 </html>
